# Python-Piscine

./: README.md  sample_data.json
 M01/ex0/: ft_garden_intro.py
 M01/ex1/: ft_garden_data.py
 M01/ex2/: ft_plant_growth.py
 M01/ex3/: ft_plant_factory.py
 M01/ex4/: ft_garden_security.py
 M01/ex5/: ft_plant_types.py
 M01/ex6/: ft_garden_analytics.py
M00/ex0/: ft_hello_garden.py
M00/ex2/: ft_harvest_total.py
M00/ex5/: ft_count_harvest_recursive.py
M00/ex6/: ft_garden_summary.py
M00/ex7/: ft_seed_inventory.py
M02/Ex0/: ft_first_exception.py
M02/ex0/: ft_first_exception.py
M02/ex1/: ft_different_errors.py
M02/ex2/: ft_custom_errors.py
M02/ex3/: ft_finally_block.py
M02/ex4/: ft_raise_errors.py
M02/ex5/: ft_garden_management.py
M03/ex0/: ft_command_quest.py
M03/ex1/: ft_score_analytics.py
M03/ex2/: ft_coordinate_system.py
M03/ex3/: ft_achievement_tracker.py
M03/ex4/: ft_inventory_system.py
M03/ex5/: ft_data_stream.py
M03/ex6/: ft_analytics_dashboard.py
M04/ex0/: ft_ancient_text.py
M04/ex1/: ft_archive_creation.py
M04/ex2/: ft_stream_management.py
M04/ex3/: ft_vault_security.py
M06/:  ft_transmutation_0.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
M06 copy/: ft_import_transmutation.py  ft_sacred_scroll.py
M07/: .gitignore  battle.py  capacitor.py  tournament.py
M08/ex1/: loading.py  pyproject.toml
(+28 files in other folders)
