[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis - M08 Exercise 1"
authors = ["vaguayo-"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
requests = { version = ">=2.28.0", optional = true }

[tool.poetry.extras]
api = ["requests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
